--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -106,7 +106,7 @@
                    <p class="text-muted mb-0">Administrator</p>
                 </div>
              </div>
-             <a class="dropdown-item" href=" {% url 'myProfile' %} ">My Profile</a>
+             <a class="dropdown-item" href="">My Profile</a>
              <a class="dropdown-item" href="inbox.html">Inbox</a>
              <a class="dropdown-item" href="login.html">Logout</a>
           </div>
