--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
    <div class="col-sm-12">
       <div class="card">
          <div class="card-body">
-            <form method="post", action=" {% url 'profileUpdate' %}" enctype="multipart/form-data">
+            <form method="post", action="" enctype="multipart/form-data">
                {% csrf_token %}
                <div class="row">
                   <div class="col-12">
