--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -94,21 +94,21 @@
        </li>
        <li class="nav-item dropdown has-arrow">
           <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-          <span class="user-img"><img class="rounded-circle" src=" /{{user.profile_pic}} " width="31" alt="Ryan Taylor"></span>
+          <span class="user-img"><img class="rounded-circle" src="/{{user.profile_pic}}" width="31" alt="Ryan Taylor"></span>
           </a>
           <div class="dropdown-menu">
              <div class="user-header">
                 <div class="avatar avatar-sm">
-                   <img src=" /{{user.profile_pic}} " alt="User Image" class="avatar-img rounded-circle">
+                   <img src="/{{user.profile_pic}}" alt="User Image" class="avatar-img rounded-circle">
                 </div>
                 <div class="user-text">
-                   <h6>Ryan Taylor</h6>
+                   <h6>{{user.first_name}} {{user.last_name}}</h6>
                    <p class="text-muted mb-0">Administrator</p>
                 </div>
              </div>
              <a class="dropdown-item" href=" {% url 'myProfile' %} ">My Profile</a>
              <a class="dropdown-item" href="inbox.html">Inbox</a>
-             <a class="dropdown-item" href="login.html">Logout</a>
+             <a class="dropdown-item" href="/loginPage">Logout</a>
           </div>
        </li>
     </ul>
