Sign Up usename and email verify or check with authentication

--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -111,9 +111,9 @@
         <h4 class="formTitle">
         Change Your Password
         </h4>
-        
+        <br>
     <div class="inputDiv">
-        <div class="avatar avatar-xl">
+        <div class="avatar avatar-xl mx-auto">
             <img src=" /{{user.profile_pic}} " alt="User Image" class="avatar-img rounded-circle">
         </div>
         
