--- a/templates/signup.html
+++ b/templates/signup.html
@@ -72,7 +72,7 @@
 <form action="" method="post">
     {% csrf_token %}
 <div class="form-group">
-<input class="form-control" type="text" placeholder="Name" name="name">
+<input class="form-control" type="text" placeholder="Username" name="name">
 </div>
 <div class="form-group">
 <input class="form-control" type="text" placeholder="Email" name="email">
