Edit Student Page Setup

--- a/templates/Students/studentList.html
+++ b/templates/Students/studentList.html
@@ -39,7 +39,7 @@
                          <td>{{s.gender}}</td>
                          <td class="text-right">
                             <div class="actions">
-                               <a href="  " class="btn btn-sm bg-success-light mr-2">
+                                <a href=" {% url 'editStudent' s.id %} " class="btn btn-sm bg-success-light mr-2">
                                <i class="fas fa-pen"></i>
                                </a>
                                <a href="#" class="btn btn-sm bg-danger-light">
