--- a/templates/Students/editStudent.html
+++ b/templates/Students/editStudent.html
@@ -6,37 +6,37 @@
     <div class="col-sm-12">
        <div class="card">
           <div class="card-body">
-             <form  action=" {% url 'addStudent'%}s.id"  method="post" enctype="multipart/form-data">
+             <form  action=" {% url 'addStudent' %} "  method="post" enctype="multipart/form-data">
                {% csrf_token %}
                 <div class="row">
                    <div class="col-12">
-                      <h5 class="form-title"><span>Add Student</span></h5>
+                      <h5 class="form-title"><span>Edit Student</span></h5>
                    </div>
 
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>First Name</label>
-                         <input name="first_name" type="text" class="form-control">
+                         <input value="{% for s in  student%}{{s.admin.first_name}} {% endfor %}"name="first_name" type="text" class="form-control">
                       </div>
                    </div>
                    <div class="col-12 col-sm-6">
                      <div class="form-group">
                         <label>Last Name</label>
-                        <input name="last_name" type="text" class="form-control">
+                        <input value="{% for s in  student%}{{s.admin.last_name}}{% endfor %} "name="last_name" type="text" class="form-control">
                      </div>
                   </div>
 
                   <div class="col-12 col-sm-6">
                      <div class="form-group">
                         <label>Email</label>
-                        <input name="email" type="text" class="form-control">
+                        <input value="{% for s in  student%}{{s.admin.email}}{% endfor %}" name="email" type="text" class="form-control">
                      </div>
                   </div>
                   
                    <div class="col-12 col-sm-6">
                       <div class="form-group">
                          <label>Username</label>
-                         <input name="username"  type="text" class="form-control">
+                         <input value="{% for s in  student%}{{s.admin.username}}{% endfor %} "name="username"  type="text" class="form-control">
                       </div>
                    </div>
                    <div class="col-11 col-sm-6">
@@ -48,7 +48,7 @@
                   <div class="col-12 col-sm-6">
                      <div class="form-group">
                         <label>Address</label>
-                        <textarea name="address"  type="text" class="form-control"></textarea>
+                        <textarea name="address"  type="text" class="form-control">{% for s in  student%} {{s.address}} {% endfor %}</textarea>
                      </div>
                   </div>
                    <div class="col-12 col-sm-6">
@@ -95,10 +95,10 @@
                    </div>
                    
                    <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Add Student</button>
+                      <button type="submit" class="btn btn-primary">Update Student</button>
                    </div>
                    <div class="col-12">
-                     {% include "includes/massage.html" %}
+                     {% include 'includes/massage.html' %}
                   </div>
                 </div>
              </form>
