--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -21,7 +21,7 @@
                   <li><a href="{% url 'studentList' %}">Student List</a></li>
                   <li><a href="student-details.html">Student View</a></li>
                   <li><a href=" {% url 'addStudent' %} ">Student Add</a></li>
-                  <li><a href="edit-student.html">Student Edit</a></li>
+                  <li><a href="">Student Edit</a></li>
                </ul>
             </li>
             <li class="submenu">
