--- a/templates/Students/addStudent.html
+++ b/templates/Students/addStudent.html
@@ -6,7 +6,7 @@
     <div class="col-sm-12">
        <div class="card">
           <div class="card-body">
-             <form  action=" {% url 'addStudent'%}s.id"  method="post" enctype="multipart/form-data">
+             <form  action=" {% url 'addStudent'%}"  method="post" enctype="multipart/form-data">
                {% csrf_token %}
                 <div class="row">
                    <div class="col-12">
