--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,7 +7,7 @@
 
 
 <head>
-    <title>Creative Coders - Register</title>
+    <title>PreSkool - Register</title>
     
     <style>
         .container {
