--- a/templates/Departments/addDepartment.html
+++ b/templates/Departments/addDepartment.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}PreSkool - Add Department{% endblock title %}
 {% block content %}
 <div class="row">
     <div class="col-sm-12">
@@ -20,6 +20,7 @@
                    </div>
                    <div class="col-12">
                       <button type="submit" class="btn btn-primary">Add Department</button>
+                      <a class="btn btn-primary" href="{% url "departmentList" %}">Department List</a>
                    </div>
                    <div class="col-12">
                      {% include 'includes/massage.html' %}
