--- a/templates/Students/editStudent.html
+++ b/templates/Students/editStudent.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-
+{% block title %}PreSkool - Student Edit{% endblock title %}
 {% block content %}
 <div class="row">
     <div class="col-sm-12">
