--- a/templates/Students/studentList.html
+++ b/templates/Students/studentList.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}PreSkool - Student List{% endblock title %}
 {% block content %}
 
 <div class="row">
@@ -51,10 +51,15 @@
                       {% endfor %} 
                    </tbody>
                 </table>
-             </div>
+             </div> <br>
+            <a class="btn btn-primary" href="{% url "addStudent" %}">Add Student</a>
           </div>
        </div>
+   
     </div>
+    <div class="col-12">
+      
+   </div>
  </div>
     
 {% endblock %}
