--- a/templates/Subjects/subjectList.html
+++ b/templates/Subjects/subjectList.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}PreSkool - Subject List{% endblock title %}
 {% block content %}
 
 <div class="row">
@@ -45,7 +45,8 @@
                      {% endfor %} 
                   </tbody>
                </table>
-            </div>
+            </div> <br>
+            <a class="btn btn-primary" href="{% url "addSubject" %}">Add Subject</a>
          </div>
       </div>
    </div>
