--- a/templates/myAdmin/adminhome.html
+++ b/templates/myAdmin/adminhome.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}PreSkool - Dashboard{% endblock title %}
 {% block content %}
 
 <div class="page-header">
